Archive2/ec/ecf6abd7bee008/output
main.cpp:1:1: error: 'blabla' does not name a type
 blabla
 ^
